# chela-x-kernel

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DECISIONS.md  ENGINEERING.md  README.md
apps/studio/: Cargo.toml
apps/studio/src/: dto.rs  main.rs  mapper.rs  projection_factory.rs  routes.rs  runtime_projection_factory.rs  workflow_projection_factory.rs
crates/kernel-adapter/: Cargo.toml
crates/kernel-adapter/src/: adapter.rs  adapter_capability.rs  adapter_command.rs  adapter_command_tests.rs  adapter_conformance_tests.rs  adapter_context.rs  adapter_context_tests.rs  adapter_contract_tests.rs  adapter_error.rs  adapter_identity.rs  adapter_query.rs  adapter_query_tests.rs  adapter_request.rs  adapter_response.rs  adapter_response_tests.rs  adapter_separation_tests.rs  adapter_status.rs  adapter_status_tests.rs  adapter_test_support.rs  adapter_validation.rs  lib.rs
crates/kernel-application/: Cargo.toml
crates/kernel-bootstrap/: Cargo.toml
crates/kernel-domain/: Cargo.toml
crates/kernel-service/: Cargo.toml
crates/kernel-service/src/: lib.rs  service.rs  service_capability.rs  service_command.rs  service_command_tests.rs  service_conformance_tests.rs  service_context.rs  service_context_tests.rs  service_contract_tests.rs  service_error.rs  service_identity.rs  service_query.rs  service_query_tests.rs  service_response.rs  service_response_tests.rs  service_status.rs  service_status_tests.rs  service_test_support.rs  service_validation.rs
crates/kernel-studio/: Cargo.toml
docs/: ADR-0001-K12-APPLICATION-INTEGRATION-BOUNDARY.md  ADR-0002-K13-SERVICE-INTEGRATION-BOUNDARY.md  ADR-0003-K14-EXTERNAL-ADAPTER-BOUNDARY.md  ADR-0004-K15-EXTERNAL-INTAKE-TRUST-BOUNDARY.md  API-FREEZE.md  API.md  BASELINE.md  IMPLEMENTATION-PLAN.md  K2-STATE-LIFECYCLE.md  K3-DECISION-AUTHORIZATION.md  K4.2-CANONICAL-HOST-VALIDATION.md  K4.2-RUNTIME-SUPERVISION.md  TRACEABILITY.md  VALIDATION.md
(+268 files in other folders)
